log
Fri 10 May 2024 12:44:52 AM UTC: 
 tests:  1|8
total_score: 0/70
c0b0469
Fri 10 May 2024 12:51:26 AM UTC: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
e8b4a39
Fri 10 May 2024 12:53:42 AM UTC: 
 treemap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
4cd8ed2
Fri 10 May 2024 12:56:49 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  6|7
total_score: 5/70
bd43b11
Fri 10 May 2024 01:04:38 AM UTC: 
 treemap.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  4|7
total_score: 5/70
b9b5775
Fri 10 May 2024 01:05:34 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|6
total_score: 5/70
2609878
Fri 10 May 2024 01:10:46 AM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|6
total_score: 5/70
a387629
Fri 10 May 2024 01:14:20 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
2a87752
Fri 10 May 2024 01:23:46 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
 tests:  13|4
total_score: 25/70
a4e4189
Fri 10 May 2024 01:24:34 AM UTC: 
 treemap.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
 tests:  15|4
total_score: 25/70
bd8a30d
Fri 10 May 2024 01:25:22 AM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  15|4
total_score: 25/70
efe4738
Fri 10 May 2024 01:31:48 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
99a9797
Fri 10 May 2024 01:47:27 AM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  15|4
total_score: 25/70
d442949
Fri 10 May 2024 02:43:11 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  15|4
total_score: 25/70
9989e00
Fri 10 May 2024 02:56:43 AM UTC: 
 treemap.c | 34 +++++++++++++++++++++++++---------
 1 file changed, 25 insertions(+), 9 deletions(-)
 tests:  15|4
total_score: 25/70
86fd2ce
Fri 10 May 2024 03:00:01 AM UTC: 
 treemap.c | 33 ++++++++-------------------------
 1 file changed, 8 insertions(+), 25 deletions(-)
 tests:  15|4
total_score: 25/70
2cf3f78
Fri 10 May 2024 03:01:15 AM UTC: 
 treemap.c | 41 +++++++++++++++++++++++++++++++++++++++++
 1 file changed, 41 insertions(+)
 tests:  17|3
total_score: 35/70
20a1db4
Fri 10 May 2024 03:02:18 AM UTC: 
 treemap.c | 29 +++++++++++++++++++----------
 1 file changed, 19 insertions(+), 10 deletions(-)
 tests:  0|0
e59edb4
Fri 10 May 2024 03:03:30 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
0c49e8d
Fri 10 May 2024 03:04:40 AM UTC: 
 treemap.c | 33 +++++----------------------------
 1 file changed, 5 insertions(+), 28 deletions(-)
 tests:  15|3
total_score: 35/70
63e3b22
Fri 10 May 2024 03:09:23 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
1e60e12
Fri 10 May 2024 03:10:38 AM UTC: 
 treemap.c | 48 +-----------------------------------------------
 1 file changed, 1 insertion(+), 47 deletions(-)
 tests:  22|2
total_score: 45/70
24ffd0d
